fix: lower is a little too low

--- a/MMM-HADisplay.css
+++ b/MMM-HADisplay.css
@@ -38,7 +38,7 @@
   line-height: 0;
   margin-left: 0.15em;
   position: relative;
-  top: 5px;
+  top: 3px;
   vertical-align: super;
 }
 
